// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check codebases coverage-fail - eslint should give expected output 1`] = `
"
./example.js
  0:0  error  Expected coverage to be at least 50%, but is: 0%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)

"
`;

exports[`Check codebases coverage-fail2 - eslint should give expected output 1`] = `
"
./example.js
  0:0  error  Expected coverage to be at least 50%, but is: 33.33%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)

"
`;

exports[`Check codebases coverage-ok - eslint should give expected output 1`] = `""`;

exports[`Check codebases coverage-ok2 - eslint should give expected output 1`] = `""`;

exports[`Check codebases flow-pragma-1 - eslint should give expected output 1`] = `
"
./example.js
   4:11  error  string:  This type is incompatible with the expected return type of 'boolean'. See line 3  flowtype-errors/show-errors
   7:7   error  identifier \`x\`:  Could not resolve name                                                    flowtype-errors/show-errors
  14:15  error  string:  The operand of an arithmetic operation must be a number                           flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases flow-pragma-2 - eslint should give expected output 1`] = `
"
./example.js
   6:11  error  string:  This type is incompatible with the expected return type of 'boolean'. See line 5  flowtype-errors/show-errors
   9:7   error  identifier \`x\`:  Could not resolve name                                                    flowtype-errors/show-errors
  16:15  error  string:  The operand of an arithmetic operation must be a number                           flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases folder with spaces - eslint should give expected output 1`] = `""`;

exports[`Check codebases no-flow-pragma - eslint should give expected output 1`] = `""`;

exports[`Check codebases project-1 - eslint should give expected output 1`] = `
"
./1.example.js
   5:11  error  string:  This type is incompatible with the expected return type of 'boolean'. See line 4  flowtype-errors/show-errors
   8:7   error  identifier \`x\`:  Could not resolve name                                                    flowtype-errors/show-errors
  15:15  error  string:  The operand of an arithmetic operation must be a number                           flowtype-errors/show-errors

./2.example.js
   8:25  error  parameter \`x\`:  Missing annotation       flowtype-errors/show-errors
  12:7   error  identifier \`x\`:  Could not resolve name  flowtype-errors/show-errors

./3.example.js
   9:11  error  string:  This type is incompatible with the expected return type of 'number'. See line 8   flowtype-errors/show-errors
  13:11  error  string:  This type is incompatible with the expected return type of 'number'. See line 12  flowtype-errors/show-errors
  16:20  error  string:  This type is incompatible with 'number'. See line 16                              flowtype-errors/show-errors
  18:8   error  who:  name is already bound 'function who'. See line 12                                    flowtype-errors/show-errors
  20:6   error  unused function argument:                                                                  flowtype-errors/show-errors
  20:12  error  function:  This type cannot be added to 'number'. See line 20                              flowtype-errors/show-errors

./4.example.js
   8:11  error  property \`lastName\`:  Property not found in 'props of React element \`Foo\`'. See line 24  flowtype-errors/show-errors
  24:13  error  props of React element \`Foo\`:  This type is incompatible with 'object type'. See line 8  flowtype-errors/show-errors

./5.example.js
  8:4  error  string:  This type is incompatible with the expected param type of 'number'. See line 4  flowtype-errors/show-errors

./6.example.js
   8:6  error  number:  This type is incompatible with the expected param type of 'object type'. See line 4       flowtype-errors/show-errors
  10:2  error  function call:  'property \`baz\`'. See line 4. Property not found in 'object literal'. See line 10  flowtype-errors/show-errors

./7.example.js
  6:4  error  string:  This type is incompatible with the expected param type of 'number'. See ./5.example.js:4  flowtype-errors/show-errors

./8.example.js
  6:6  error  number:  This type is incompatible with the expected param type of 'object type'. See ./6.example.js:4      flowtype-errors/show-errors
  8:2  error  function call:  'property \`baz\`'. See ./6.example.js:4. Property not found in 'object literal'. See line 8  flowtype-errors/show-errors

./9.example.js
  8:18  error  React element \`Hello\`:  'property \`name\`'. See ./9.example.import.js:6. Property not found in 'props of React element \`Hello\`'. See line 8  flowtype-errors/show-errors

✖ 20 problems (20 errors, 0 warnings)

"
`;

exports[`Check codebases run-all - eslint should give expected output 1`] = `
"
./example.js
   2:11  error  string:  This type is incompatible with the expected return type of 'boolean'. See line 1  flowtype-errors/show-errors
   5:7   error  identifier \`x\`:  Could not resolve name                                                    flowtype-errors/show-errors
  12:15  error  string:  The operand of an arithmetic operation must be a number                           flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases run-all-flowdir - eslint should give expected output 1`] = `
"
./subdir/example.js
   2:11  error  string:  This type is incompatible with the expected return type of 'boolean'. See line 1  flowtype-errors/show-errors
   5:7   error  identifier \`x\`:  Could not resolve name                                                    flowtype-errors/show-errors
  12:15  error  string:  The operand of an arithmetic operation must be a number                           flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Format 1.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 6,
        "offset": 91,
      },
      "start": Object {
        "column": 10,
        "line": 6,
        "offset": 83,
      },
    },
    "message": "string:  This type is incompatible with the expected return type of 'boolean'. See line 5",
    "start": 6,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 9,
        "offset": 102,
      },
      "start": Object {
        "column": 6,
        "line": 9,
        "offset": 101,
      },
    },
    "message": "identifier \`x\`:  Could not resolve name",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 16,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 16,
        "offset": 208,
      },
      "start": Object {
        "column": 14,
        "line": 16,
        "offset": 205,
      },
    },
    "message": "string:  The operand of an arithmetic operation must be a number",
    "start": 16,
    "type": "default",
  },
]
`;

exports[`Format 2.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 9,
        "offset": 96,
      },
      "start": Object {
        "column": 24,
        "line": 9,
        "offset": 95,
      },
    },
    "message": "parameter \`x\`:  Missing annotation",
    "start": 9,
    "type": "missing-annotation",
  },
  Object {
    "end": 13,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 13,
        "offset": 121,
      },
      "start": Object {
        "column": 6,
        "line": 13,
        "offset": 120,
      },
    },
    "message": "identifier \`x\`:  Could not resolve name",
    "start": 13,
    "type": "default",
  },
]
`;

exports[`Format 3.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 10,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 10,
        "offset": 145,
      },
      "start": Object {
        "column": 10,
        "line": 10,
        "offset": 134,
      },
    },
    "message": "string:  This type is incompatible with the expected return type of 'number'. See line 9",
    "start": 10,
    "type": "default",
  },
  Object {
    "end": 14,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 14,
        "offset": 205,
      },
      "start": Object {
        "column": 10,
        "line": 14,
        "offset": 201,
      },
    },
    "message": "string:  This type is incompatible with the expected return type of 'number'. See line 13",
    "start": 14,
    "type": "default",
  },
  Object {
    "end": 17,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 17,
        "offset": 242,
      },
      "start": Object {
        "column": 19,
        "line": 17,
        "offset": 228,
      },
    },
    "message": "string:  This type is incompatible with 'number'. See line 17",
    "start": 17,
    "type": "default",
  },
  Object {
    "end": 19,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 19,
        "offset": 254,
      },
      "start": Object {
        "column": 7,
        "line": 19,
        "offset": 251,
      },
    },
    "message": "who:  name is already bound 'function who'. See line 13",
    "start": 19,
    "type": "default",
  },
  Object {
    "end": 21,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 21,
        "offset": 275,
      },
      "start": Object {
        "column": 5,
        "line": 21,
        "offset": 266,
      },
    },
    "message": "unused function argument: ",
    "start": 21,
    "type": "default",
  },
  Object {
    "end": 21,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 21,
        "offset": 275,
      },
      "start": Object {
        "column": 11,
        "line": 21,
        "offset": 272,
      },
    },
    "message": "function:  This type cannot be added to 'number'. See line 21",
    "start": 21,
    "type": "default",
  },
]
`;

exports[`Format 4.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 12,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 12,
        "offset": 171,
      },
      "start": Object {
        "column": 10,
        "line": 9,
        "offset": 121,
      },
    },
    "message": "property \`lastName\`:  Property not found in 'props of React element \`Foo\`'. See line 25",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 25,
    "loc": Object {
      "end": Object {
        "column": 35,
        "line": 25,
        "offset": 399,
      },
      "start": Object {
        "column": 12,
        "line": 25,
        "offset": 375,
      },
    },
    "message": "props of React element \`Foo\`:  This type is incompatible with 'object type'. See line 9",
    "start": 25,
    "type": "default",
  },
]
`;

exports[`Format 5.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
        "offset": 93,
      },
      "start": Object {
        "column": 3,
        "line": 9,
        "offset": 90,
      },
    },
    "message": "string:  This type is incompatible with the expected param type of 'number'. See line 5",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 6.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 9,
        "offset": 111,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 107,
      },
    },
    "message": "number:  This type is incompatible with the expected param type of 'object type'. See line 5",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 11,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 11,
        "offset": 132,
      },
      "start": Object {
        "column": 1,
        "line": 11,
        "offset": 115,
      },
    },
    "message": "function call:  'property \`baz\`'. See line 5. Property not found in 'object literal'. See line 11",
    "start": 11,
    "type": "default",
  },
]
`;

exports[`Format 7.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
        "offset": 80,
      },
      "start": Object {
        "column": 3,
        "line": 7,
        "offset": 77,
      },
    },
    "message": "string:  This type is incompatible with the expected param type of 'number'. See ./5.example.js:5",
    "start": 7,
    "type": "default",
  },
]
`;

exports[`Format 8.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 7,
        "offset": 85,
      },
      "start": Object {
        "column": 5,
        "line": 7,
        "offset": 81,
      },
    },
    "message": "number:  This type is incompatible with the expected param type of 'object type'. See ./6.example.js:5",
    "start": 7,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 9,
        "offset": 106,
      },
      "start": Object {
        "column": 1,
        "line": 9,
        "offset": 89,
      },
    },
    "message": "function call:  'property \`baz\`'. See ./6.example.js:5. Property not found in 'object literal'. See line 9",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 9.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 9,
        "offset": 167,
      },
      "start": Object {
        "column": 17,
        "line": 9,
        "offset": 159,
      },
    },
    "message": "React element \`Hello\`:  'property \`name\`'. See ./9.example.import.js:7. Property not found in 'props of React element \`Hello\`'. See line 9",
    "start": 9,
    "type": "default",
  },
]
`;
